--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,18 @@
         android:layout_height="wrap_content"
         android:hint="Введите первую строку" />
 
+    <EditText
+        android:id="@+id/secondStringInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Введите вторую строку"
+        android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/concatButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Объединить строки"
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
